--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^17.0.2",
     "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.18",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
