--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
     "react": "^17.0.2",
+    "react-cookie-consent": "^6.2.4",
     "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-responsive-carousel": "^3.2.18",
